# orthorectify

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  version.h.in
.github/workflows/: build.yml  docker.yml
src/: CMakeLists.txt  customformatter.h  dataset.hpp  main.cpp  parameters.hpp  processing.hpp  rawimage.cpp  rawimage.hpp  transform.hpp  types.hpp  utils.cpp  utils.hpp
